# CofactorPredictionTool

./: .gitignore  Dockerfile  MANIFEST.in  README.md  README.rst  case_studies_analysis.xlsx  environment.yml  requirements.txt  setup.cfg  setup.py
examples/: ML_analysis.ipynb  datasets_analysis.ipynb
examples/.ipynb_checkpoints/: pca-checkpoint.ipynb  propythia-checkpoint.ipynb
examples/scripts/build_datasets/: build_dataset_run.py
examples/scripts/deep_learning/: dataset_split_run.py  esm2_cnn_run.py  flashprot_cnn_run.py  seqvec_cnn_run.py
examples/scripts/deep_learning.py/: dataset_split_run.py  esm2_cnn_run.py  flashprot_cnn_run.py  seqvec_cnn_run.py
examples/scripts/descriptors/: feature_selection_run.py  protein_descriptores_run.py
examples/scripts/embeddings/: esm2_run.py  protflash_run.py  seqvec_run.py
examples/scripts/pca/: check_reviewed_status.py  pca.py
ml_results/: Results_ML.xlsx
nextflow/: FilesUtilities.py  config.json  main.nf  nextflow.config  worker.py
src/cofactor_prediction_tool/: __init__.py
src/cofactor_prediction_tool.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/cofactor_prediction_tool/api/: __init__.py  brenda.py  ncbi.py  pdb.py  sabio.py  uniprot.py
src/cofactor_prediction_tool/build_dataset/: BuildDataset.py
src/cofactor_prediction_tool/deep_learning/: __init__.py  cnn_esm.py  cnn_flashprot.py  cnn_model.py  cnn_seqvec.py  dataset_split.py
src/cofactor_prediction_tool/machine_learning/: MLDescriptors.py  MLEmbeddings.py  __init__.py
src/cofactor_prediction_tool/preprocessing/: __init__.py  (+6 more)
(+65 files in other folders)
