[bumpversion]
version = 0.0.1
commit = True
tag = False

[metadata]
name = cofactor_prediction_tool
author = Joana Gonçalves
author_email = joanaoliveira1000@gmail.com
description = Cofactor Prediction Tool
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/joanag05/Cofactor_Prediction_Tool
project_urls =
	Bug Tracker =
	Documentation =
classifiers =
	Programming Language :: Python :: 3
	License :: OSI Approved :: Apache Software License
	Operating System :: OS Independent
keywords =
	metabolism
	biology
	constraint-based
	flux-balance analysis

[options]
zip_safe = True
install_requires =
    cobra ~= 0.29.0
	numpy ~= 1.26.4
	pandas ~= 2.2.2
	joblib ~= 1.4.0
	scipy ~= 1.13.0
	torch ~= 2.3.0
	fair-esm ~= 2.0.0
	propythia ~= 3.0.2
	biopython  
	scikit-learn ~= 1.2.2
	torchvision ~= 0.18.0
	torchmetrics ~= 1.4.0.post0
	tqdm ~= 4.62.3
	optuna ~= 3.0.0
	matplotlib ~= 3.4.3
	protflash ~= 0.1.1


tests_require =
	tox
packages = find:
package_dir =
	= src

[options.package_data]
cofactor_prediction_tool =
	resources/*
* = *.pth

[bdist_wheel]
universal = 1

[bumpversion:file:setup.py]
search = version='{current_version}'
replace = version='{new_version}'

[bumpversion:file:src/mewpy/__init__.py]
search = __version__ = '{current_version}'
replace = __version__ = '{new_version}'

[flake8]
max-line-length = 120
exclude = __init__.py,docs

[aliases]
test = pytest